Robledo_Miguel_prac2/build/parser.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement ENDLINE statement_list
    3               | statement

    4 statement: assignment
    5          | expression
    6          | statement COMMENT
    7          | repeat_statement
    8          | ε

    9 repeat_statement: REPEAT expression DO statement_list DONE

   10 assignment: ID ASSIGN expression

   11 expression: expr_arithmetic

   12 expr_arithmetic: expr_unary
   13                | expr_arithmetic PLUS expr_unary
   14                | expr_arithmetic MINUS expr_unary
   15                | expr_arithmetic OR expr_unary

   16 expr_unary: expr_term
   17           | PLUS expr_unary
   18           | MINUS expr_unary
   19           | expr_unary AND expr_term

   20 expr_term: expr_pow
   21          | expr_term MULT expr_pow
   22          | expr_term DIV expr_pow
   23          | expr_term MOD expr_pow
   24          | NOT expr_term

   25 expr_pow: factor
   26         | expr_pow POW factor
   27         | expr_pow GT factor
   28         | expr_pow LT factor
   29         | expr_pow GE factor
   30         | expr_pow LE factor
   31         | expr_pow EQ factor
   32         | expr_pow NE factor

   33 factor: ID
   34       | INTEGER
   35       | STRING
   36       | BOOLEAN
   37       | REAL
   38       | PI
   39       | E
   40       | LPAREN expression RPAREN
   41       | expr_trig
   42       | expr_len
   43       | expr_substr

   44 expr_trig: SIN LPAREN expression RPAREN
   45          | COS LPAREN expression RPAREN
   46          | TAN LPAREN expression RPAREN

   47 expr_len: LEN LPAREN STRING RPAREN
   48         | LEN LPAREN ID RPAREN

   49 expr_substr: SUBSTR LPAREN STRING COMMA expression COMMA expression RPAREN
   50            | SUBSTR LPAREN ID COMMA expression COMMA expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGN <no_value> (258) 10
    ENDLINE <no_value> (259) 2
    INTEGER <integer> (260) 34
    ID <ident> (261) 10 33 48 50
    REAL <real> (262) 37
    STRING <string> (263) 35 47 49
    BOOLEAN <boolean> (264) 36
    COS (265) 45
    SIN (266) 44
    TAN (267) 46
    PLUS (268) 13 17
    MINUS (269) 14 18
    MULT (270) 21
    DIV (271) 22
    MOD (272) 23
    POW (273) 26
    GT (274) 27
    GE (275) 29
    LT (276) 28
    LE (277) 30
    EQ (278) 31
    NE (279) 32
    NOT (280) 24
    AND (281) 19
    OR (282) 15
    PI (283) 38
    E (284) 39
    LEN (285) 47 48
    SUBSTR (286) 49 50
    LPAREN (287) 40 44 45 46 47 48 49 50
    RPAREN (288) 40 44 45 46 47 48 49 50
    COMMA (289) 49 50
    COMMENT (290) 6
    REPEAT (291) 9
    DO (292) 9
    DONE (293) 9


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    program (40)
        on left: 1
        on right: 0
    statement_list (41)
        on left: 2 3
        on right: 1 2 9
    statement (42)
        on left: 4 5 6 7 8
        on right: 2 3 6
    repeat_statement (43)
        on left: 9
        on right: 7
    assignment (44)
        on left: 10
        on right: 4
    expression <ident.id_val> (45)
        on left: 11
        on right: 5 9 10 40 44 45 46 49 50
    expr_arithmetic <ident.id_val> (46)
        on left: 12 13 14 15
        on right: 11 13 14 15
    expr_unary <ident.id_val> (47)
        on left: 16 17 18 19
        on right: 12 13 14 15 17 18 19
    expr_term <ident.id_val> (48)
        on left: 20 21 22 23 24
        on right: 16 19 21 22 23 24
    expr_pow <ident.id_val> (49)
        on left: 25 26 27 28 29 30 31 32
        on right: 20 21 22 23 26 27 28 29 30 31 32
    factor <ident.id_val> (50)
        on left: 33 34 35 36 37 38 39 40 41 42 43
        on right: 25 26 27 28 29 30 31 32
    expr_trig <ident.id_val> (51)
        on left: 44 45 46
        on right: 41
    expr_len <ident.id_val> (52)
        on left: 47 48
        on right: 42
    expr_substr <ident.id_val> (53)
        on left: 49 50
        on right: 43


State 0

    0 $accept: • program $end

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16
    REPEAT   shift, and go to state 17

    $default  reduce using rule 8 (statement)

    program           go to state 18
    statement_list    go to state 19
    statement         go to state 20
    repeat_statement  go to state 21
    assignment        go to state 22
    expression        go to state 23
    expr_arithmetic   go to state 24
    expr_unary        go to state 25
    expr_term         go to state 26
    expr_pow          go to state 27
    factor            go to state 28
    expr_trig         go to state 29
    expr_len          go to state 30
    expr_substr       go to state 31


State 1

   34 factor: INTEGER •

    $default  reduce using rule 34 (factor)


State 2

   10 assignment: ID • ASSIGN expression
   33 factor: ID •

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 33 (factor)


State 3

   37 factor: REAL •

    $default  reduce using rule 37 (factor)


State 4

   35 factor: STRING •

    $default  reduce using rule 35 (factor)


State 5

   36 factor: BOOLEAN •

    $default  reduce using rule 36 (factor)


State 6

   45 expr_trig: COS • LPAREN expression RPAREN

    LPAREN  shift, and go to state 33


State 7

   44 expr_trig: SIN • LPAREN expression RPAREN

    LPAREN  shift, and go to state 34


State 8

   46 expr_trig: TAN • LPAREN expression RPAREN

    LPAREN  shift, and go to state 35


State 9

   17 expr_unary: PLUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 37
    expr_term    go to state 26
    expr_pow     go to state 27
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 10

   18 expr_unary: MINUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 38
    expr_term    go to state 26
    expr_pow     go to state 27
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 11

   24 expr_term: NOT • expr_term

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_term    go to state 39
    expr_pow     go to state 27
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 12

   38 factor: PI •

    $default  reduce using rule 38 (factor)


State 13

   39 factor: E •

    $default  reduce using rule 39 (factor)


State 14

   47 expr_len: LEN • LPAREN STRING RPAREN
   48         | LEN • LPAREN ID RPAREN

    LPAREN  shift, and go to state 40


State 15

   49 expr_substr: SUBSTR • LPAREN STRING COMMA expression COMMA expression RPAREN
   50            | SUBSTR • LPAREN ID COMMA expression COMMA expression RPAREN

    LPAREN  shift, and go to state 41


State 16

   40 factor: LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 42
    expr_arithmetic  go to state 24
    expr_unary       go to state 25
    expr_term        go to state 26
    expr_pow         go to state 27
    factor           go to state 28
    expr_trig        go to state 29
    expr_len         go to state 30
    expr_substr      go to state 31


State 17

    9 repeat_statement: REPEAT • expression DO statement_list DONE

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 43
    expr_arithmetic  go to state 24
    expr_unary       go to state 25
    expr_term        go to state 26
    expr_pow         go to state 27
    factor           go to state 28
    expr_trig        go to state 29
    expr_len         go to state 30
    expr_substr      go to state 31


State 18

    0 $accept: program • $end

    $end  shift, and go to state 44


State 19

    1 program: statement_list •

    $default  reduce using rule 1 (program)


State 20

    2 statement_list: statement • ENDLINE statement_list
    3               | statement •
    6 statement: statement • COMMENT

    ENDLINE  shift, and go to state 45
    COMMENT  shift, and go to state 46

    $default  reduce using rule 3 (statement_list)


State 21

    7 statement: repeat_statement •

    $default  reduce using rule 7 (statement)


State 22

    4 statement: assignment •

    $default  reduce using rule 4 (statement)


State 23

    5 statement: expression •

    $default  reduce using rule 5 (statement)


State 24

   11 expression: expr_arithmetic •
   13 expr_arithmetic: expr_arithmetic • PLUS expr_unary
   14                | expr_arithmetic • MINUS expr_unary
   15                | expr_arithmetic • OR expr_unary

    PLUS   shift, and go to state 47
    MINUS  shift, and go to state 48
    OR     shift, and go to state 49

    $default  reduce using rule 11 (expression)


State 25

   12 expr_arithmetic: expr_unary •
   19 expr_unary: expr_unary • AND expr_term

    AND  shift, and go to state 50

    $default  reduce using rule 12 (expr_arithmetic)


State 26

   16 expr_unary: expr_term •
   21 expr_term: expr_term • MULT expr_pow
   22          | expr_term • DIV expr_pow
   23          | expr_term • MOD expr_pow

    MULT  shift, and go to state 51
    DIV   shift, and go to state 52
    MOD   shift, and go to state 53

    $default  reduce using rule 16 (expr_unary)


State 27

   20 expr_term: expr_pow •
   26 expr_pow: expr_pow • POW factor
   27         | expr_pow • GT factor
   28         | expr_pow • LT factor
   29         | expr_pow • GE factor
   30         | expr_pow • LE factor
   31         | expr_pow • EQ factor
   32         | expr_pow • NE factor

    POW  shift, and go to state 54
    GT   shift, and go to state 55
    GE   shift, and go to state 56
    LT   shift, and go to state 57
    LE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60

    $default  reduce using rule 20 (expr_term)


State 28

   25 expr_pow: factor •

    $default  reduce using rule 25 (expr_pow)


State 29

   41 factor: expr_trig •

    $default  reduce using rule 41 (factor)


State 30

   42 factor: expr_len •

    $default  reduce using rule 42 (factor)


State 31

   43 factor: expr_substr •

    $default  reduce using rule 43 (factor)


State 32

   10 assignment: ID ASSIGN • expression

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 61
    expr_arithmetic  go to state 24
    expr_unary       go to state 25
    expr_term        go to state 26
    expr_pow         go to state 27
    factor           go to state 28
    expr_trig        go to state 29
    expr_len         go to state 30
    expr_substr      go to state 31


State 33

   45 expr_trig: COS LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 62
    expr_arithmetic  go to state 24
    expr_unary       go to state 25
    expr_term        go to state 26
    expr_pow         go to state 27
    factor           go to state 28
    expr_trig        go to state 29
    expr_len         go to state 30
    expr_substr      go to state 31


State 34

   44 expr_trig: SIN LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 63
    expr_arithmetic  go to state 24
    expr_unary       go to state 25
    expr_term        go to state 26
    expr_pow         go to state 27
    factor           go to state 28
    expr_trig        go to state 29
    expr_len         go to state 30
    expr_substr      go to state 31


State 35

   46 expr_trig: TAN LPAREN • expression RPAREN

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expression       go to state 64
    expr_arithmetic  go to state 24
    expr_unary       go to state 25
    expr_term        go to state 26
    expr_pow         go to state 27
    factor           go to state 28
    expr_trig        go to state 29
    expr_len         go to state 30
    expr_substr      go to state 31


State 36

   33 factor: ID •

    $default  reduce using rule 33 (factor)


State 37

   17 expr_unary: PLUS expr_unary •
   19           | expr_unary • AND expr_term

    $default  reduce using rule 17 (expr_unary)


State 38

   18 expr_unary: MINUS expr_unary •
   19           | expr_unary • AND expr_term

    $default  reduce using rule 18 (expr_unary)


State 39

   21 expr_term: expr_term • MULT expr_pow
   22          | expr_term • DIV expr_pow
   23          | expr_term • MOD expr_pow
   24          | NOT expr_term •

    $default  reduce using rule 24 (expr_term)


State 40

   47 expr_len: LEN LPAREN • STRING RPAREN
   48         | LEN LPAREN • ID RPAREN

    ID      shift, and go to state 65
    STRING  shift, and go to state 66


State 41

   49 expr_substr: SUBSTR LPAREN • STRING COMMA expression COMMA expression RPAREN
   50            | SUBSTR LPAREN • ID COMMA expression COMMA expression RPAREN

    ID      shift, and go to state 67
    STRING  shift, and go to state 68


State 42

   40 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 69


State 43

    9 repeat_statement: REPEAT expression • DO statement_list DONE

    DO  shift, and go to state 70


State 44

    0 $accept: program $end •

    $default  accept


State 45

    2 statement_list: statement ENDLINE • statement_list

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16
    REPEAT   shift, and go to state 17

    $default  reduce using rule 8 (statement)

    statement_list    go to state 71
    statement         go to state 20
    repeat_statement  go to state 21
    assignment        go to state 22
    expression        go to state 23
    expr_arithmetic   go to state 24
    expr_unary        go to state 25
    expr_term         go to state 26
    expr_pow          go to state 27
    factor            go to state 28
    expr_trig         go to state 29
    expr_len          go to state 30
    expr_substr       go to state 31


State 46

    6 statement: statement COMMENT •

    $default  reduce using rule 6 (statement)


State 47

   13 expr_arithmetic: expr_arithmetic PLUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 72
    expr_term    go to state 26
    expr_pow     go to state 27
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 48

   14 expr_arithmetic: expr_arithmetic MINUS • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 73
    expr_term    go to state 26
    expr_pow     go to state 27
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 49

   15 expr_arithmetic: expr_arithmetic OR • expr_unary

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_unary   go to state 74
    expr_term    go to state 26
    expr_pow     go to state 27
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 50

   19 expr_unary: expr_unary AND • expr_term

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_term    go to state 75
    expr_pow     go to state 27
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 51

   21 expr_term: expr_term MULT • expr_pow

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_pow     go to state 76
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 52

   22 expr_term: expr_term DIV • expr_pow

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_pow     go to state 77
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 53

   23 expr_term: expr_term MOD • expr_pow

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    expr_pow     go to state 78
    factor       go to state 28
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 54

   26 expr_pow: expr_pow POW • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 79
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 55

   27 expr_pow: expr_pow GT • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 80
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 56

   29 expr_pow: expr_pow GE • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 81
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 57

   28 expr_pow: expr_pow LT • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 82
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 58

   30 expr_pow: expr_pow LE • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 83
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 59

   31 expr_pow: expr_pow EQ • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 84
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 60

   32 expr_pow: expr_pow NE • factor

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 36
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16

    factor       go to state 85
    expr_trig    go to state 29
    expr_len     go to state 30
    expr_substr  go to state 31


State 61

   10 assignment: ID ASSIGN expression •

    $default  reduce using rule 10 (assignment)


State 62

   45 expr_trig: COS LPAREN expression • RPAREN

    RPAREN  shift, and go to state 86


State 63

   44 expr_trig: SIN LPAREN expression • RPAREN

    RPAREN  shift, and go to state 87


State 64

   46 expr_trig: TAN LPAREN expression • RPAREN

    RPAREN  shift, and go to state 88


State 65

   48 expr_len: LEN LPAREN ID • RPAREN

    RPAREN  shift, and go to state 89


State 66

   47 expr_len: LEN LPAREN STRING • RPAREN

    RPAREN  shift, and go to state 90


State 67

   50 expr_substr: SUBSTR LPAREN ID • COMMA expression COMMA expression RPAREN

    COMMA  shift, and go to state 91


State 68

   49 expr_substr: SUBSTR LPAREN STRING • COMMA expression COMMA expression RPAREN

    COMMA  shift, and go to state 92


State 69

   40 factor: LPAREN expression RPAREN •

    $default  reduce using rule 40 (factor)


State 70

    9 repeat_statement: REPEAT expression DO • statement_list DONE

    INTEGER  shift, and go to state 1
    ID       shift, and go to state 2
    REAL     shift, and go to state 3
    STRING   shift, and go to state 4
    BOOLEAN  shift, and go to state 5
    COS      shift, and go to state 6
    SIN      shift, and go to state 7
    TAN      shift, and go to state 8
    PLUS     shift, and go to state 9
    MINUS    shift, and go to state 10
    NOT      shift, and go to state 11
    PI       shift, and go to state 12
    E        shift, and go to state 13
    LEN      shift, and go to state 14
    SUBSTR   shift, and go to state 15
    LPAREN   shift, and go to state 16
    REPEAT   shift, and go to state 17

    $default  reduce using rule 8 (statement)

    statement_list    go to state 93
    statement         go to state 20
    repeat_statement  go to state 21
    assignment        go to state 22
    expression        go to state 23
    expr_arithmetic   go to state 24
    expr_unary        go to state 25
    expr_term         go to state 26
    expr_pow          go to state 27
    factor            go to state 28
    expr_trig         go to state 29
    expr_len          go to state 30
    expr_substr       go to state 31


State 71

    2 statement_list: statement ENDLINE statement_list •

    $default  reduce using rule 2 (statement_list)


State 72

   13 expr_arithmetic: expr_arithmetic PLUS expr_unary •
   19 expr_unary: expr_unary • AND expr_term

    AND  shift, and go to state 50

    $default  reduce using rule 13 (expr_arithmetic)


State 73

   14 expr_arithmetic: expr_arithmetic MINUS expr_unary •
   19 expr_unary: expr_unary • AND expr_term

    AND  shift, and go to state 50

    $default  reduce using rule 14 (expr_arithmetic)


State 74

   15 expr_arithmetic: expr_arithmetic OR expr_unary •
   19 expr_unary: expr_unary • AND expr_term

    AND  shift, and go to state 50

    $default  reduce using rule 15 (expr_arithmetic)


State 75

   19 expr_unary: expr_unary AND expr_term •
   21 expr_term: expr_term • MULT expr_pow
   22          | expr_term • DIV expr_pow
   23          | expr_term • MOD expr_pow

    MULT  shift, and go to state 51
    DIV   shift, and go to state 52
    MOD   shift, and go to state 53

    $default  reduce using rule 19 (expr_unary)


State 76

   21 expr_term: expr_term MULT expr_pow •
   26 expr_pow: expr_pow • POW factor
   27         | expr_pow • GT factor
   28         | expr_pow • LT factor
   29         | expr_pow • GE factor
   30         | expr_pow • LE factor
   31         | expr_pow • EQ factor
   32         | expr_pow • NE factor

    POW  shift, and go to state 54
    GT   shift, and go to state 55
    GE   shift, and go to state 56
    LT   shift, and go to state 57
    LE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60

    $default  reduce using rule 21 (expr_term)


State 77

   22 expr_term: expr_term DIV expr_pow •
   26 expr_pow: expr_pow • POW factor
   27         | expr_pow • GT factor
   28         | expr_pow • LT factor
   29         | expr_pow • GE factor
   30         | expr_pow • LE factor
   31         | expr_pow • EQ factor
   32         | expr_pow • NE factor

    POW  shift, and go to state 54
    GT   shift, and go to state 55
    GE   shift, and go to state 56
    LT   shift, and go to state 57
    LE   shift, and go to state 58
    EQ   shift, and go to state 59
    NE   shift, and go to state 60

    $default  reduce using rule 22 (expr_term)


State 78

   23 expr_term: expr_term MOD expr_pow •
   26 expr_pow: expr_pow • POW factor
   27         | expr_pow • GT factor
   28         | expr_pow • LT factor
   29         | expr_pow • GE factor
   30         | expr_pow • LE factor
   31         | expr_pow • EQ factor
   32         | expr_pow • NE factor
